--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #5f4b8bff;
+    --primary: #97BC62FF;
     --secondary: #8d9297;
     --light: #f8f9fa;
     --dark: #182333;
@@ -105,7 +105,7 @@
     }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 772px) {
     .navbar .nav-item .dropdown-menu {
         display: block;
         border: none;
@@ -134,8 +134,15 @@
     display: flex;
     align-items: center;
     text-align: start;
-    background: rgba(0, 0, 0, 0.65);
     z-index: 1;
+}
+
+
+@media (max-width: 992px) {
+    .carousel-caption {
+    display: none;
+    }
+
 }
 
 .carousel-control-prev,
@@ -371,12 +378,12 @@
     display: none;
 }
 header i {
-    color: #5f4b8bff;
+    color: #97BC62FF;
     font-size: 32px;
     text-align: center;
 }
 header h2 {
-    color: #5f4b8bff;
+    color: #97BC62FF;
     font-weight: 500;
     text-align: center;
 }
@@ -384,7 +391,7 @@ header h2 {
     text-align: center;
 }
 .data p a {
-    color: #5f4b8bff;
+    color: #97BC62FF;
     text-decoration: none;
     text-align: center !important;
 }
@@ -396,10 +403,10 @@ header h2 {
     text-align: center;
 }
 .buttons .cookie-button {
-    border: 2px solid #5f4b8bff;
+    border: 2px solid #97BC62FF;
     color: #fff;
     padding: 8px 0;
-    background: #5f4b8bff;
+    background: #97BC62FF;
     cursor: pointer;
     width: calc(100% / 2 - 10px);
     transition: all 0.2s ease;
@@ -408,15 +415,15 @@ header h2 {
 }
 .buttons #acceptBtn:hover {
     background-color: transparent;
-    color: #5f4b8bff;
+    color: #97BC62FF;
 }
 #declineBtn {
     background-color: #fff;
-    color: #5f4b8bff;
+    color: #97BC62FF;
     border-radius: 0;
 }
 #declineBtn:hover {
-    background-color: #5f4b8bff;
+    background-color: #97BC62FF;
     color: #fff;
 }
 
